# ada

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  install.sh  pull_test.txt  rand  rought.txt  sample.txt  test.txt  uninstall.sh
include/: add.h  commit.h  config.h  github_auth.h  init.h  log.h  merge.h  pull.h  push.h  remote.h  status.h
src/: add.cpp  commit.cpp  config.cpp  github_auth.cpp  init.cpp  log.cpp  main.cpp  merge.cpp  pull.cpp  push.cpp  remote.cpp  status.cpp
